# CampusAcademicManagementPortal

./: login.html  new.py  pyproject.toml  readme.md
CampusAcademicManagement/: anitsdb  manage.py
CampusAcademicManagement/CampusAcademicManagement/: asgi.py  settings.py  urls.py  wsgi.py
CampusAcademicManagement/authentication/: forms.py  models.py  urls.py  views.py
CampusAcademicManagement/authentication/migrations/: 0001_initial.py  0002_eventregistration.py  0003_delete_eventregistration.py  0004_student_studentpersonalinfo.py
CampusAcademicManagement/authentication/templates/: error_page.html
CampusAcademicManagement/authentication/templates/admin_anits/: add_student_information.html  admin-club.html  admin-feedback.html  admin-home.html
CampusAcademicManagement/authentication/templates/authentication/: event_registration.html  home.html  student_dashboard.html  student_profile.html
CampusAcademicManagement/authentication/templates/main/: home.html  login.html
CampusAcademicManagement/authentication/templates/student/: announcements.html  clubs.html  event_registration.html  student_dashboard.html  student_profile.html  suggestion.html
CollegeManagement/App1/: views.py
CollegeManagement/CollegeManagement/: settings.py  urls.py
